--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,13 @@ install:
 
 script:
     - make build
+
+deploy:
+    provider: releases
+    api_key: $GITHUB_TOKEN
+    file:
+        - bin/sharelatex2git-linux
+        - bin/sharelatex2git-darwin
+    skip_cleanup: true
+    on:
+        tags: true
