--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ deploy:
     skip_cleanup: true
     on:
         tags: true
-        condition: $TRAVIS_GO_VERSION =~ ^1\.11\.[0-9]+$
+        condition: $TRAVIS_GO_VERSION =~ ^1\.11\..+$
